# ACTx

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.md  build_ext.py  cmake_install.cmake  compile_commands.json  main.py  model.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: code-formatting.yml  publish.yaml  tests.yml
act/include/: device.h  mps.h  tensor.h  types.h  utility.h
act/src/: dispatcher.cpp  mps.mm  runner.cpp  tensor.cpp  utility.cpp  wrapper.cpp
act/src/ilcs/: py_devices.cpp  py_extension.cpp  py_tensor.cpp
act/src/kernels/: init.metal
act/tests/: add.cpp  inits.cpp  sub.cpp
activations/: main.py
actx/include/: device.h  device_type.h  dispatcher.h  memory.h  memory_pool.h  mps.h  op_register.h  op_types.h  opnode.h  storage.h  tensor.h  types.h  utility.h
actx/src/: device_type.cpp  dispatcher.cpp  memory.mm  memory_pool.cpp  mps.mm  op_register.cpp  runner.cpp  tensor.cpp  types.cpp  utility.cpp
actx/src/ilcs/: py_tensor.cpp
actx/src/kernels/: arithmetic.metal  broadcast.metal  comparisons.metal  init.metal  math_functions.metal  trignometric_and_hyperbolic.metal
actx/tests/: add.cpp  autodiff.cpp  broadcast_higher_dims.cpp  broadcast_invalid_shapes.cpp  broadcast_scalar.cpp  broadcast_shapes.cpp  broadcast_single_axes.cpp  comparisons.cpp  dispatcher.cpp  div.cpp  hyperbolic.cpp  inits.cpp  memory_pool.cpp  misc.cpp  mul.cpp  pow.cpp  shape_mismatch.cpp  sub.cpp  tensor_view.cpp  trignometric.cpp  unaryops.cpp  viewops.cpp
backend/: .gitignore
backend/_Cpp/: .gitignore  CMakeLists.txt  build.sh  main.py  setup.py  test.py
backend/_Cpp/src/: Shaders.metal  matrix.cpp  mps.h  mps.mm  out  reference.cpp  shader.mm  tensor.mm  wrapper.cpp
backend/_Cpp/src/beta/: cpu.cpp  cpu.h  device.cpp  device.h  mps_helper.h
backend/src/: shader.mm  tensor.mm
backup/beta/: mps_helper.mm  tensor.mm
costs/: main.py
design/: README.md  notes.md
examples/mlp/: model.py
examples/mlp/activations/: main.py
examples/mlp/costs/: main.py
examples/mlp/layers/: main.py
examples/mlp/optimizers/: main.py
examples/mlp/tensors/: tensor.py
examples/mlp/tests/: activation_methods.py  cost_methods.py
examples/mlp/tf_impl/: gpt-version.py  mnist_model.h5  test.py
include/: device.h  dispatcher.h  dispather.h  main.h  memory.h  memory_pool.h  mps.h  mps.mm  op_register.h  op_types.h  runner.cpp  tensor.h  tensor.mm  tensorbase.h  types.h  utility.cpp  utility.h
include/kernels/: comparisons.metal
layers/: __init__.py  main.py
optimizers/: main.py
src/: Shaders.metal  dispatcher.cpp  main.cpp  memory.mm  memory_pool.cpp  mps.h  mps.mm  runner.cpp  tensor.cpp  tensor.h  tensor.mm  utility.cpp
src/kernels/: arithmetic.metal  broadcast.metal  comparisons.metal  init.metal  math_functions.metal
src/webgpu/: matrix.cpp  matrix.h
tests/: CMakeLists.txt  activation_methods.py  add.cpp  broadcast_higher_dims.cpp  broadcast_invalid_shapes.cpp  broadcast_scalar.cpp  broadcast_shapes.cpp  broadcast_shpapes.cpp  broadcast_single_axes.cpp  dispatcher.cpp  div.cpp  get_dtype_size.cpp  layer.py  matmul.cpp  memory_pool.cpp  misc.cpp  mul.cpp  op.cpp  op_test.cpp  shape_mismatch.cpp  sub.cpp  tests
