[metadata]
name = MetalGraphs 
version = 0.1.0
description = Lightweight GPU Accelerated Tensor Library With Automatic Differentiation 
author = arjunmnath 
author_email = arjunmnath@icloud.com
url = https://github.com/arjunmnath/MetalGraphs
long_description = file: README.md
license = GNU GPL V3.0
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
dev =
    setuptools>=42
    wheel

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[options.packages.find]
where = src

[options.package_data]
* = *.metallib

